<resources>
    <string name="app_name">GroceryList</string>

    <!-- Menu Actions Preference -->
    <string name="action_share">Share</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_next">Next</string>
    <string name="action_save"><b>Save</b></string>
    <string name="action_settings">Settings</string>
    <string name="action_delete_all_notes"><b>DELETE ALL NOTES</b></string>

    <!-- Actions Preference -->
    <string name="appbar_name">GROCERY</string>

    <string name="edit_activity_note">Edit GROCERY</string>
    <string name="add_activity_note">Add GROCERY</string>
    <string name="add_new_grocery"><b>Add New GROCERY</b></string>
    <string name="title_activity_main">GROCERY</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title_name">Android Studio</string>
    <string name="nav_header_email">android.studio@android.com</string>
    <string name="nav_header_phonenumber">+2348185078986</string>
    <string name="quantity">QUANTITY</string>

    <string name="profile_name">Name: </string>
    <string name="profile_email">Email: </string>
    <string name="profile_phonenumber">Phonenumber: </string>


    <string name="nav_header_desc">Navigation header</string>
    <string name="nav_menu_notes">GROCERIES</string>
    <string name="nav_menu_courses">Courses</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="go_to_grocery_list">View Grocery List</string>
    <string name="save_grocery">Save Grocery</string>
</resources>
