<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="410dp"
    android:layout_height="wrap_content"
    android:background="#C8D85F"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/txt_dia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:text="Kindly Fill The Form:"
        android:textColor="#E65100"
        android:textSize="15sp"
        android:textStyle="bold"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="2dp"
        android:orientation="vertical"
        android:padding="2dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:orientation="horizontal"
            android:padding="2dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:text="@string/profile_name"
                android:textColor="#E65100"
                android:textAppearance="@android:style/TextAppearance.Material.Medium" />

            <EditText
                android:id="@+id/question_text_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:hint="Your Name"
                android:maxLength="30"
                android:inputType="text"
                android:textAppearance="@android:style/TextAppearance.Material.Large" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:orientation="horizontal"
            android:padding="2dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:text="@string/profile_email"
                android:textColor="#E65100"
                android:textAppearance="@android:style/TextAppearance.Material.Medium" />

            <EditText
                android:id="@+id/question_text_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:hint="Your Email"
                android:maxLength="30"
                android:inputType="textEmailAddress"
                android:textAppearance="@android:style/TextAppearance.Material.Large" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:orientation="horizontal"
            android:padding="2dp">

            <TextView
                android:textColor="#E65100"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:text="@string/profile_phonenumber"
                android:textAppearance="@android:style/TextAppearance.Material.Medium" />

            <EditText
                android:id="@+id/question_phone_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:hint="Your Phonenumber"
                android:maxLength="14"
                android:inputType="phone"
                android:textAppearance="@android:style/TextAppearance.Material.Large" />

        </LinearLayout>


        <View
            android:layout_width="match_parent"
            android:layout_height="4dp"
            android:background="@color/colorBlackForMe"
            android:padding="2dp" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="#C8D85F"
        android:layout_margin="4dp"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btn_yes"
            android:layout_width="100dp"
            android:layout_height="30dp"
            android:background="@android:color/white"
            android:clickable="true"
            android:text="Yes"
            android:layout_marginLeft="3dp"
            android:textColor="#424242"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn_no"
            android:layout_width="100dp"
            android:layout_height="30dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="3dp"
            android:background="@android:color/white"
            android:clickable="true"
            android:text="No"
            android:textColor="#424242"
            android:textStyle="bold" />
    </LinearLayout>

</LinearLayout>